fix: add base path and confirm image file names

--- a/index.html
+++ b/index.html
@@ -1,96 +1,8 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lueur Beauté</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Playfair+Display&display=swap" rel="stylesheet">
-</head>
-<body>
-
-  <!-- ヘッダー -->
-  <header class="header">
-    <h1 class="logo">Lueur Beauté</h1>
-    <nav>
-      <ul class="nav-list">
-        <li>Home</li><li>Service</li><li>Price</li><li>Voice</li><li>Reserve</li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- ファーストビュー -->
-  <section class="hero">
-    <div class="hero-text">
-      <h2>あなたの輝きを、<br>もっと自由に</h2>
-      <p>心まで明るくする、癒しのひととき。</p>
-      <a href="#reserve" class="btn">今すぐ予約</a>
-    </div>
-  </section>
-
-  <!-- サービス紹介 -->
-  <section class="service fade-in">
-    <h2>Service</h2>
-    <div class="service-items">
-      <div class="item">フェイシャルケア</div>
-      <div class="item">ボディトリートメント</div>
-      <div class="item">リラクゼーション</div>
-    </div>
-  </section>
-
-  <!-- Before/After -->
-  <section class="before fade-in">
-    <h2>Before</h2>
-    <div class="before-slider">
-      <img src="before.jpg" alt="Before">
-      <img src="after.jpg" alt="After">
-    </div>
-  </section>
-
-  <!-- 料金プラン -->
-  <section class="price fade-in">
-    <h2>Price</h2>
-    <div class="price-cards">
-      <div class="card">ライト<br>¥5,000〜</div>
-      <div class="card">スタンダード<br>¥8,000〜</div>
-      <div class="card">プレミアム<br>¥12,000〜</div>
-    </div>
-  </section>
-
-  <!-- お客様の声 -->
-  <section class="voice fade-in">
-    <h2>お客様の声</h2>
-    <div class="voice-items">
-      <div class="voice-card">A様「丁寧で安心できました」</div>
-      <div class="voice-card">B様「肌が見違えるほど明るく」</div>
-      <div class="voice-card">C様「またお願いしたいです」</div>
-    </div>
-  </section>
-
-  <!-- 予約フォーム -->
-  <section id="reserve" class="reserve fade-in">
-    <h2>ご予約フォーム</h2>
-    <form>
-      <input type="text" placeholder="お名前" required>
-      <input type="email" placeholder="メールアドレス" required>
-      <input type="date" required>
-      <button type="submit">送信</button>
-    </form>
-  </section>
-
-  <!-- フッター -->
-  <footer class="footer">
-    <p>© 2025 Lueur Beauté</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
-=======
-<!DOCTYPE html>
-<html lang="ja">
-<head>
+  <base href="/lp-3/">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lueur Beauté</title>
